--- a/GabroConfig.json
+++ b/GabroConfig.json
@@ -1,8 +1,13 @@
 {
     "components": {
+        "Text": {
+            "props": [{
+                "name": "children?",
+                "type": "ritch"
+            }]
+        },
         "Full": {
-            "props": [
-                {
+            "props": [{
                     "name": "bg?",
                     "type": "string"
                 },
@@ -37,8 +42,7 @@
             ]
         },
         "Half": {
-            "props": [
-                {
+            "props": [{
                     "name": "bg?",
                     "type": "string"
                 },
@@ -73,8 +77,7 @@
             ]
         },
         "Section": {
-            "props": [
-                {
+            "props": [{
                     "name": "height?",
                     "type": "string"
                 },
@@ -133,8 +136,7 @@
             ]
         },
         "Navbar": {
-            "props": [
-                {
+            "props": [{
                     "name": "trans?",
                     "type": "boolean"
                 },
@@ -165,8 +167,7 @@
             ]
         },
         "Footer": {
-            "props": [
-                {
+            "props": [{
                     "name": "bg?",
                     "type": "string"
                 },
@@ -185,8 +186,7 @@
             ]
         },
         "Card": {
-            "props": [
-                {
+            "props": [{
                     "name": "shadow?",
                     "type": "string"
                 },
@@ -241,8 +241,7 @@
             ]
         },
         "ContactForm": {
-            "props": [
-                {
+            "props": [{
                     "name": "shadow?",
                     "type": "boolean"
                 },
@@ -269,8 +268,7 @@
             ]
         },
         "LandingPage": {
-            "props": [
-                {
+            "props": [{
                     "name": "children?",
                     "type": "any"
                 },
