--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-app",
-  "productName": "my-app",
+  "name": "gabro-builder",
+  "productName": "Gabro Builder",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "UI for building websites using Gabro Framework",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -20,8 +20,7 @@
   "config": {
     "forge": {
       "packagerConfig": {},
-      "makers": [
-        {
+      "makers": [{
           "name": "@electron-forge/maker-squirrel",
           "config": {
             "name": "my_app"
@@ -49,13 +48,11 @@
             "mainConfig": "./webpack.main.config.js",
             "renderer": {
               "config": "./webpack.renderer.config.js",
-              "entryPoints": [
-                {
-                  "html": "./src/index.html",
-                  "js": "./src/app.tsx",
-                  "name": "main_window"
-                }
-              ]
+              "entryPoints": [{
+                "html": "./src/index.html",
+                "js": "./src/app.tsx",
+                "name": "main_window"
+              }]
             }
           }
         ]
