--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "config": {
     "forge": {
       "packagerConfig": {},
-      "makers": [{
+      "makers": [
+        {
           "name": "@electron-forge/maker-squirrel",
           "config": {
             "name": "my_app"
@@ -48,11 +49,13 @@
             "mainConfig": "./webpack.main.config.js",
             "renderer": {
               "config": "./webpack.renderer.config.js",
-              "entryPoints": [{
-                "html": "./src/index.html",
-                "js": "./src/app.tsx",
-                "name": "main_window"
-              }]
+              "entryPoints": [
+                {
+                  "html": "./src/index.html",
+                  "js": "./src/app.tsx",
+                  "name": "main_window"
+                }
+              ]
             }
           }
         ]
@@ -82,6 +85,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2"
