--- a/GabroConfig.json
+++ b/GabroConfig.json
@@ -1,5 +1,67 @@
 {
     "components": {
+        "ContactInfo": {
+            "props": [{
+                "name": "shadow?",
+                "type": "boolean"
+            }, {
+                "name": "bg?",
+                "type": "string"
+            }, {
+                "name": "color?",
+                "type": "string"
+            }, {
+                "name": "bgSize?",
+                "type": "string"
+            }, {
+                "name": "children?",
+                "type": "any"
+            }],
+            "can_be_in": ["Half", "Full"]
+        },
+        "ContactPhone": {
+            "props": [{
+                "name": "name",
+                "type": "string"
+            }, {
+                "name": "number",
+                "type": "string"
+            }, {
+                "name": "type",
+                "type": "\"phone\" | \"mobile\""
+            }],
+            "can_be_in": ["ContactInfo"]
+        },
+        "ContactSocial": {
+            "props": [{
+                "name": "url",
+                "type": "string"
+            }, {
+                "name": "type",
+                "type": "\"facebook\" | \"instagram\""
+            }],
+            "can_be_in": ["ContactInfo"]
+        },
+        "ContactEmail": {
+            "props": [{
+                "name": "name?",
+                "type": "string"
+            }, {
+                "name": "email",
+                "type": "string"
+            }],
+            "can_be_in": ["ContactInfo"]
+        },
+        "ContactPlace": {
+            "props": [{
+                "name": "address",
+                "type": "string"
+            }, {
+                "name": "mapsUrl?",
+                "type": "string"
+            }],
+            "can_be_in": ["ContactInfo"]
+        },
         "ImageSection": {
             "props": [{
                 "name": "children?",
@@ -15,7 +77,7 @@
                 "type": "string"
             }, {
                 "name": "line?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "paddingTop?",
                 "type": "boolean"
@@ -24,7 +86,7 @@
                 "type": "boolean"
             }, {
                 "name": "color?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "backgroundPosition?",
                 "type": "string"
@@ -36,16 +98,16 @@
                 "type": "string"
             }, {
                 "name": "img?",
-                "type": "string"
+                "type": "filePath"
             }, {
                 "name": "positionMobile?",
                 "type": "string"
             }, {
                 "name": "bg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "bgBehindText?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "parallax",
                 "type": "boolean"
@@ -61,10 +123,10 @@
         "Row": {
             "props": [{
                 "name": "bg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "color?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "paddingBot?",
                 "type": "string"
@@ -76,7 +138,7 @@
                 "type": "boolean"
             }, {
                 "name": "line?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "children?",
                 "type": "any"
@@ -89,10 +151,10 @@
         "Full": {
             "props": [{
                 "name": "bg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "color?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "paddingBot?",
                 "type": "string"
@@ -104,7 +166,7 @@
                 "type": "boolean"
             }, {
                 "name": "line?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "children?",
                 "type": "any"
@@ -117,10 +179,10 @@
         "Half": {
             "props": [{
                 "name": "bg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "color?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "paddingBot?",
                 "type": "string"
@@ -132,7 +194,7 @@
                 "type": "boolean"
             }, {
                 "name": "line?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "children?",
                 "type": "any"
@@ -194,10 +256,10 @@
                 "type": "boolean"
             }, {
                 "name": "color?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "txtColor?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "menu",
                 "type": "{ text"
@@ -210,19 +272,32 @@
             }, {
                 "name": "bgFilter",
                 "type": "string"
+            }, {
+                "name": "children?",
+                "type": "any"
             }],
             "can_be_in": ["root"]
+        },
+        "NavbarLink": {
+            "props": [{
+                "name": "text",
+                "type": "string"
+            }, {
+                "name": "link",
+                "type": "string"
+            }],
+            "can_be_in": ["Navbar"]
         },
         "Footer": {
             "props": [{
                 "name": "bg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "color?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "logo?",
-                "type": "string"
+                "type": "filePath"
             }, {
                 "name": "children?",
                 "type": "any"
@@ -241,19 +316,19 @@
                 "type": "string"
             }, {
                 "name": "iconBg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "iconColor?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "divBorder?",
                 "type": "string"
             }, {
                 "name": "conBg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "conColor?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "icon?",
                 "type": "JSX.Element"
@@ -278,16 +353,16 @@
                 "type": "boolean"
             }, {
                 "name": "bg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "color?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "formColor?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "buttonColor?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "children?",
                 "type": "any"
@@ -306,10 +381,10 @@
                 "type": "string"
             }, {
                 "name": "bg?",
-                "type": "string"
+                "type": "bg"
             }, {
                 "name": "color?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "bgSize?",
                 "type": "string"
@@ -321,10 +396,10 @@
                 "type": "\"left\" | \"right\""
             }, {
                 "name": "iconColor?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "blockColor?",
-                "type": "string"
+                "type": "color"
             }, {
                 "name": "blockOrientation",
                 "type": "\"top\" | \"bot\""
@@ -339,7 +414,7 @@
                 "type": "\"top\" | \"bot\""
             }, {
                 "name": "img?",
-                "type": "string"
+                "type": "filePath"
             }, {
                 "name": "className?",
                 "type": "string"
@@ -348,6 +423,26 @@
                 "type": "string"
             }],
             "can_be_in": ["root"]
+        },
+        "IconList": {
+            "props": [{
+                "name": "children?",
+                "type": "any"
+            }],
+            "can_be_in": ["Half", "Full"]
+        },
+        "IconListItem": {
+            "props": [{
+                "name": "icon_path",
+                "type": "string"
+            }, {
+                "name": "heading",
+                "type": "string"
+            }, {
+                "name": "children?",
+                "type": "any"
+            }],
+            "can_be_in": ["IconList"]
         },
         "h1": {
             "props": [{
@@ -382,7 +477,7 @@
                 "name": "children?",
                 "type": "string"
             }],
-            "can_be_in": ["Full", "Half", "Footer", "LandingPage", "Card", "ContactForm"]
+            "can_be_in": ["Full", "Half", "Footer", "LandingPage", "Card", "ContactForm", "IconListItem"]
         },
         "a": {
             "props": [{
@@ -392,14 +487,14 @@
                 "name": "children?",
                 "type": "string"
             }],
-            "can_be_in": ["Full", "Half", "Footer", "LandingPage", "Card", "ContactForm", "h1", "h2", "h3", "h4", "p", "a"]
+            "can_be_in": ["Full", "Half", "Footer", "LandingPage", "Card", "ContactForm", "IconListItem", "h1", "h2", "h3", "h4", "p", "a"]
         },
         "Text": {
             "props": [{
                 "name": "children?",
                 "type": "ritch"
             }],
-            "can_be_in": ["Full", "Half", "Footer", "LandingPage", "Card", "ContactForm", "h1", "h2", "h3", "h4", "p", "a"]
+            "can_be_in": ["Full", "Half", "Footer", "LandingPage", "Card", "ContactForm", "IconListItem", "h1", "h2", "h3", "h4", "p", "a"]
         }
     }
 }
