--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon":"src/icon.ico"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
@@ -59,6 +61,9 @@
             }
           }
         ]
+      ],
+      "afterExtract": [
+        "./build-scripts/copy_config.js"
       ]
     }
   },
